Fix popup mobile layout issue

--- a/src/styles/_Popup.scss
+++ b/src/styles/_Popup.scss
@@ -165,7 +165,7 @@ div.popup {
         color: rgb(51, 51, 51);
 
         @include heightPhone {
-            top: 360px;
+            top: 260px;
         }
 
         @include B-phone {
