--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1187,7 +1187,7 @@ div.popup .technologies {
 
 @media (max-height: 710px) {
   div.popup .technologies {
-    top: 360px;
+    top: 260px;
   }
 }
 
